--- a/res/css/style.css
+++ b/res/css/style.css
@@ -1,6 +1,6 @@
 ﻿/* ========== Inport Fonts ========== */
 
-@font-face {
+/*@font-face {
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 300;
@@ -19,7 +19,8 @@
   font-style: normal;
   font-weight: 700;
   src: local('Roboto Bold'), local('Roboto-Bold'), url(../font/Roboto-Bold.ttf) format('ttf');
-}
+}*/
+
 
 
 /* ========== Main Styles ========== */
@@ -30,15 +31,17 @@ html, body {
 }
 
 body {
-    font-family: Roboto, sans-serif;
+    font-family: 'Roboto', sans-serif;
     -webkit-font-smoothing: antialiased;
-    background-color: #e5e5e5;
+    background-color: #fff;
 }
+
 
 
 /* ========== Page header (Top bar) ========== */
 
 .page-header {
+    width: 100%;
     width: 100%;
     position: fixed;
     background: #6472cd;
@@ -46,7 +49,7 @@ body {
     z-index: 500;
     height: 64px;
     max-height: 64px;
-    box-shadow: none;
+	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
 .ndroidme-logo a {
@@ -90,28 +93,31 @@ body {
 
 .header-menu ul li {
     list-style-type: none;
-    display: inline;
-    margin-right: 45px;
     height: 64px;
+    line-height: 64px;
+    display: inline-block;
+}
+
+.header-menu ul li:last-child {
+	margin-right: 30px;
+}
+
+.header-menu ul li:hover {
+	background-color: rgba(0, 0, 0, 0.1);
 }
 
 .header-menu ul li a {
-    font-weight: 400;
-    font-size: 20px;
-    text-transform: capitalize;
+    font-size: 14px;
+    text-transform: uppercase;
     color: #FFFFFF;
     text-decoration: none;
-    line-height: 64px;
     outline: none;
-    -webkit-transition: all 150ms ease-in-out;
-    -moz-transition: all 150ms ease-in-out;
-    -ms-transition: all 150ms ease-in-out;
-    -o-transition: all 150ms ease-in-out;
-    transition: all 150ms ease-in-out;
-}
-
-.header-menu ul li a:hover {
-    opacity: .87;
+    font-weight: 500;
+    /*font-family: Roboto medium;*/
+    display: inline-block;
+    line-height: 60px;
+    padding: 0 24px;
+    box-sizing: border-box;
 }
 
 .responsive-menu-overlay {
@@ -151,6 +157,7 @@ body {
 }
 
 
+
 /* ========== Cards structure ========== */
 
 .card {
@@ -158,6 +165,7 @@ body {
     border-radius: 2px;
     box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2);
 }
+
 
 
 /* ========== Page Footer ========== */
@@ -178,9 +186,11 @@ body {
 }
 
 
+
 /* ========== Media Queries ========== */
 
 @media screen and (max-width: 840px) {
+
 
     /* page header & responsive menu */
 
@@ -230,6 +240,7 @@ body {
         display: none;
     }
     
+	
     /* footer */
     
     .page-footer {
