--- a/res/css/style.css
+++ b/res/css/style.css
@@ -52,6 +52,10 @@ body {
 	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
+.page-header.no-shadow {
+	box-shadow: none;
+}
+
 .ndroidme-logo a {
     float: left;
     height: 64px;
@@ -71,7 +75,7 @@ body {
 
 .ndroidme-logo img {
     width: 38px;
-    margin: 10px 0px 0px 24px;
+    margin: 13px 24px;
 }
 
 .resp-name-logo {
