--- a/res/css/home.css
+++ b/res/css/home.css
@@ -16,7 +16,7 @@ body {
 	width: 100%;
 	height: 280px;
 	margin-top: 64px;
-	position: relative;
+	position: fixed;
 }
 
 .large-logo-header img {
@@ -36,6 +36,9 @@ body {
 
 .main-container {
 	width: 100%;
+	margin-top: 344px;
+	position: absolute;
+	background: #EFF3F6;
 }
 
 .article-cards-container {
@@ -135,10 +138,47 @@ body {
 /* ========== Load More Button ========== */
 
 .loadmore-btn-container {
-	background: #e0e0e0;
+	background: none;
 	width: 100%;
 	float: left;
-	height: 48px;
+	height: 36px;
 	text-align: center;
 	margin: 15px 0;
+}
+
+.loadmore-btn-container button {
+	background: none;
+	border: none;
+	outline: none;
+	box-shadow: none;
+	text-shadow: none;
+	cursor: pointer;
+	height: 36px;
+	min-width: 88px;
+	padding: 0 16px;
+	border-radius: 2px;
+	font-family: 'Roboto', sans-serif;
+	color: rgba(0, 0, 0, 0.52);
+	text-transform: uppercase;
+	font-size: 14px;
+	font-weight: 500;
+}
+
+.loadmore-btn-container button:hover,
+.loadmore-btn-container button:focus {
+	background: rgba(0, 0, 0, 0.12);
+}
+
+.loadmore-btn-container button:active {
+	background: rgba(0, 0, 0, 0.24);
+}
+
+
+
+/* ========== Page Footer ========== */
+
+.page-footer {
+    float: left;
+    width: 100%;
+    margin-top: 30px;
 }
