--- a/res/css/news.css
+++ b/res/css/news.css
@@ -1,13 +1,143 @@
-﻿
-
-
-/* ========== Main Container ========== */
+﻿/* ========== Main Container ========== */
 
 .main-container {
 	max-width: 840px;
 	margin: 0 auto;
 	margin-top: 90px;
 	margin-bottom: 50px;
+}
+
+
+
+/* ========== Article Admin panel ========== */
+
+.adminPanelCard {
+	background: #333333;
+	height: 48px;
+	border-radius: 2px;
+	box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
+	box-sizing: border-box;
+	padding: 0 24px;
+	padding-right: 6px;
+}
+
+.publishToggleContainer {
+	height: 48px;
+	float: left;
+	padding-top: 15px;
+	box-sizing: border-box;
+	width: 229px;
+	border-right: 1px solid rgba(255, 255, 255, 0.1);
+	user-select: none;
+}
+
+.unpublishedLabelTxt,
+.publishToggle {
+	float: left;
+	color: rgba(0, 0, 0, 0.54);
+	font-size: 14px;
+	font-weight: 400;
+	padding-right: 12px;
+}
+
+.unpublishedLabelTxt {
+	color: #E57373;
+	padding-top: 1px;
+	position: absolute;
+	left: -92px;
+}
+
+.editArticleBtn {
+	float: right;
+	margin-top: 6px;
+	height: 36px;
+	padding: 0 16px;
+	line-height: 37px;
+	border-radius: 2px;
+	color: #FFEB3B;
+	text-transform: uppercase;
+	font-size: 14px;
+	font-weight: 500;
+	user-select: none;
+}
+
+.editArticleBtn:hover {
+	background: rgba(255, 255, 255, 0.1);
+	cursor: pointer;
+}
+
+.editArticleBtn:active {
+	background: rgba(255, 255, 255, 0.22);
+	cursor: pointer;
+}
+
+.InfoTextAdminPanel {
+	text-align: center;
+	margin: 0 auto;
+	padding-top: 16px;
+	font-size: 14px;
+	color: rgba(255, 255, 255, 0.36);
+	font-weight: 400;
+}
+
+.toggle {
+	position: relative;
+	margin-left: 90px;
+}
+
+.toggle input[type=checkbox] {
+	display: none;
+}
+
+.toggle label {
+	cursor: pointer;
+}
+
+.toggle label .text {
+	padding-left: 50px;
+	color: rgba(255, 255, 255, 0.36);
+	top: 1px;
+	position: absolute;
+}
+
+.toggle label .slot {
+	position: absolute;
+	top: 3px;
+	left: 2px;
+	width: 32px;
+	height: 14px;
+	background-color: #717171;
+	border-radius: 13px;
+	transition: all 0.3s ease-in-out;
+}
+
+.toggle label .lever {
+	position: absolute;
+	width: 20px;
+	height: 20px;
+	background-color: #bdbdbd;
+	border-radius: 20px;
+	box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.75);
+	z-index: 1;
+	transition: all 0.3s ease-in-out;
+	left: 0;
+}
+
+.toggle input[type=checkbox]:checked ~ label .slot {
+	background-color: rgba(77, 208, 225, 0.5);
+}
+
+.toggle input[type=checkbox]:checked ~ label .lever {
+	background-color: #4DD0E1;
+	left: 17px;
+}
+
+.toggle input[type=checkbox]:checked ~ label .text {
+	color: #4DD0E1;
+}
+
+.toggle input[type=checkbox]:checked ~ .unpublishedLabelTxt {
+	color: rgba(255, 255, 255, 0.36);
 }
 
 
@@ -59,7 +189,6 @@
 	padding: 2px 0;
 	font-size: 18px;
 	font-weight: 500;
-	/*font-family: Roboto medium;*/
 	text-transform: uppercase;
 	color: #AAAAAA;
 }
