--- a/res/css/home.css
+++ b/res/css/home.css
@@ -7,6 +7,13 @@ body {
 	background: #EFF3F6;
 }
 
+.ndroidme-logo img {
+	width: 38px;
+	margin: 13px 24px;
+	float: left;
+	outline: none;
+}
+
 
 
 /* ========== Header image (Logo) ========== */
@@ -17,6 +24,8 @@ body {
 	height: 280px;
 	margin-top: 64px;
 	position: fixed;
+	
+	display: none;
 }
 
 .large-logo-header img {
@@ -32,11 +41,120 @@ body {
 
 
 
+/* ========== Header Banner ========== */
+
+.headerBannerHero {
+	max-width: 940px;
+	margin: 0 auto;
+	margin-top: 88px;
+	background: url(../img/banner_hero.jpg);
+	height: 360px;
+	background-position-y: -270px;
+	background-position-x: -112px;
+	border-radius: 6px;
+	margin-bottom: 4px;
+	box-shadow: 0 1px 1px rgba(0,0,0,.15);
+	position: relative;
+}
+
+.topBannerCOntentContainer {
+	z-index: 9;
+	position: absolute;
+	margin-top: 52px;
+	margin-left: 64px;
+	max-width: 80%;
+}
+
+.topBannerCOntentContainer h1 {
+	color: #fff;
+	font-size: 40px;
+	margin: 0;
+	padding: 0;
+	font-weight: 400;
+	max-width: 400px;
+	line-height: 50px;
+}
+
+.topBannerCOntentContainer p {
+	color: rgba(255, 255, 255, 0.64);
+	font-size: 18px;
+	line-height: 28px;
+	max-width: 500px;
+}
+
+.topColorOverlay {
+	background: rgba(100, 114, 205, 0.64);
+	height: 100%;
+	width: 100%;
+	position: absolute;
+	top: 0;
+	border-radius: 6px;
+}
+
+.bannerCtaButtons {
+	margin-top: 38px;
+}
+
+.bannerCtaButtons a {
+	color: transparent;
+}
+
+.bannerCtaButtons a.ctaOne div {
+	background: #FFC107;
+	height: 36px;
+	line-height: 37px;
+	padding: 0 24px;
+	border-radius: 2px;
+	text-transform: uppercase;
+	font-size: 14px;
+	font-weight: 500;
+	color: rgba(0, 0, 0, 0.84);
+	box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2);
+	-webkit-transition: all 200ms ease-in-out;
+	-moz-transition: all 200ms ease-in-out;
+	-ms-transition: all 200ms ease-in-out;
+	-o-transition: all 200ms ease-in-out;
+	transition: all 200ms ease-in-out;
+}
+
+.bannerCtaButtons a.ctaOne div:hover {
+	box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
+	cursor: pointer;
+	background: #FFCA28;
+}
+
+.bannerCtaButtons a.ctaTwo div {
+	background: none;
+	height: 36px;
+	line-height: 37px;
+	padding: 0 24px;
+	border-radius: 2px;
+	text-transform: uppercase;
+	font-size: 14px;
+	font-weight: 500;
+	color: #FFC107;
+	margin-left: 20px;
+}
+
+.bannerCtaButtons a.ctaTwo div:hover {
+	background: rgba(255, 255, 255, 0.1);
+	color: #FFCA28;
+	cursor: pointer;
+}
+
+.bannerCtaButtons a.ctaOne div,
+.bannerCtaButtons a.ctaTwo div {
+	display: inline-block;
+}
+
+
+
+
 /* ========== Containers ========== */
 
 .main-container {
 	width: 100%;
-	margin-top: 344px;
+	/*margin-top: 344px;*/
 	position: absolute;
 	background: #EFF3F6;
 }
@@ -54,8 +172,19 @@ body {
 	height: 48px;
 	width: 960px;
 	padding: 0 10px;
-	margin: 10px 0 0 0;
+	margin: 6px 0 0 0;
 	box-sizing: border-box;
+	
+	text-align: right;
+	position: relative;
+}
+
+.latestInfoTitle {
+	float: left;
+	height: 48px;
+	line-height: 48px;
+	font-size: 20px;
+	color: rgba(0, 0, 0, 0.48);
 }
 
 .menuTrigger {
@@ -85,15 +214,17 @@ body {
 	position: absolute;
 	z-index: 999;
 	background: white;
-	top: 2px;
+	top: -8px;
 	margin-left: -8px;
 	padding: 8px 0;
-	max-height: calc(50% - 187px);
+	max-height: 340px;
 	min-width: 168px;
 	overflow: auto;
 	border-radius: 2px;
 	box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
 	display: none;
+	right: -36px;
+	text-align: left;
 }
 
 .tagSelectMenu::-webkit-scrollbar {
@@ -171,13 +302,16 @@ body {
 	font-size: 18px;
 	font-weight: 400;
 	color: rgba(0, 0, 0, 0.84);
+	margin-top: -4px;
  }
  
  .news-img {
-	 width: 100%;
+	width: 100%;
+	border-top-right-radius: 2px;
+	border-top-left-radius: 2px;
  }
  
-.news-content-preview {
+/*.news-content-preview {
 	padding: 16px;
 	margin: 0;
 	margin-top: -4px;
@@ -185,7 +319,7 @@ body {
 	line-height: 18px;
 	color: rgba(0, 0, 0, 0.52);
 	font-weight: 500;
-}
+}*/
 
 .news-info {
 	text-align: right;
